fixed the z-index for loading animation

--- a/sass/pages/_loading-animation.scss
+++ b/sass/pages/_loading-animation.scss
@@ -9,6 +9,7 @@
     animation-name: first-page;
     animation-duration: 3050ms;
     animation-fill-mode: forwards;
+    position: absolute;
 }
 
 #text-animation {
